[package]
name = "no-face"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
fnv = "1.0.7"
minijinja = { version = "2.10.2", features = ["builtins", "loader"] }
resvg = "0.45.1"
serde = { version = "1.0.219", features = ["serde_derive"] }
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.22"
